# octorus

./: Cargo.toml  README.md  class_diagram.mmd
cli/: Cargo.toml
cli/src/: main.rs
gooey/: Cargo.toml
gooey/src/: app_core.rs  lib.rs  main.rs
octorus/: Cargo.toml
octorus/src/: lib.rs  ordatabase.rs  ormongodb.rs  ormysql.rs  orresult.rs
