[package]
name = "octorus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
bson = "2.7.0"
chrono = "0.4.30"
mongodb = "2.6.1"
mysql="*"
serde = "1.0.188"
serde_json = "1.0.107"
tokio = "1.32.0"
